Closed
Bug 103012
Opened 24 years ago
Closed 23 years ago
Update of subscribed newsgroups stops if some newsgroups are empty
Categories
(MailNews Core :: Networking: NNTP, defect)
MailNews Core
Networking: NNTP
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.2beta
People
(Reporter: whunter, Assigned: sspitzer)
References
Details
Attachments
(1 file)
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.4) Gecko/20010913
BuildID: 2001091323
We have an internal newsgroup server. Some of the newly created newsgroups where
empty and some were not. When Mozilla went to update the unread count it would
update all of the groups until it hit one with an empty message count and then stop.
I added a message to each of the empty newsgroups and the process now works
properly.
Reproducible: Always
Steps to Reproduce:
1. Subscribe to newsgroups that are not empty
2. Subscribe to newsgroups that ARE empty
3. Subscribe to newsgroups that are not empty
4. Collapse and expand the folder in the tree view
Actual Results: The unread count for the groups after the empty ones are not
updated
Expected Results: The unread count for the groups after the empty ones should
have been updated
We use a news server replication product called dnews
telnet dnews 119
200 ... DNEWS Version 5.5c6, S0, posting OK
Confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•23 years ago
|
||
I confirm also. Mac OS 9.1 Build 2002071808
Comment 3•23 years ago
|
||
windows too
Comment 4•23 years ago
|
||
Setting OS=All by previous comments and additional report (to be included here)
in news:de.comm.software.mozilla. I think this is a normal bug (not minor).
Probably, this is the wrong component. Over to NNTP.
pi
Severity: minor → normal
Component: Subscribe → Networking: News
OS: Linux → All
Hardware: PC → All
*** Bug 164957 has been marked as a duplicate of this bug. ***
Warwick, if you create a log, does it look something similar to the snippet I've
included in the comments below? Thanks.
According to: http://www.ietf.org/rfc/rfc0977.txt
3.2.2. Responses
211 n f l s group selected
(n = estimated number of articles in group,
f = first article number in the group,
l = last article number in the group,
s = name of the group.)
411 no such news group
So this means in your case:
0[2742d8]: (26e1a80) Receiving: 211 0 103 102 nz.org.net-society
It has a zero-length of articles in the group (estimated), followed by 2
numbers: the first article number (103) and the last article number (102), then
of course the requisite name of the newsgroup.
*** Bug 168005 has been marked as a duplicate of this bug. ***
*** Bug 150869 has been marked as a duplicate of this bug. ***
It also seems like bug 146751 is closely related to or a DUP of this.
Assignee | ||
Comment 10•23 years ago
|
||
should be a simple fix, working on it...
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.2beta
Comment 11•23 years ago
|
||
I'd argue your definition of the problem:
Old:
> When Mozilla went to update the unread count it would update all of the groups
> until it hit one with an empty message count and then stop.
When Mozilla went to update the unread count it would update all of the groups
until it hit one with a *zero unread message count* and then stop.
My test case (based on bug 168005 that just got marked as a dup of this one) has
say 10 groups, all with many messages (mostly) marked read, and it seems to stop
at the first group with zero unread messages. Is that not different to what
you're seeing?
And another thing... it doesn't actually *stop* updating the groups according to
the status bar - just that the unread messages indicator for each group isn't
updated.
sTu.
Assignee | ||
Comment 12•23 years ago
|
||
Assignee | ||
Comment 13•23 years ago
|
||
fixed.
logged on 10-3-2001. Only took me about a year. Sheesh.
As stephen will tell you, news gets very little love.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 14•23 years ago
|
||
Seth, thanks for the fix. I'll be checking this once I download a nightly tomorrow.
*** Bug 146751 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
Works fine with 20020927 trunk build.
Again thanks to Seth and Stephen.
Marking VERIFIED.
Status: RESOLVED → VERIFIED
Assignee | ||
Comment 17•23 years ago
|
||
david: thanks for verifying.
Comment 18•23 years ago
|
||
*** Bug 168005 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•