fix for bug #103012.  Servers can send us data like:  "211 0 41 40 nz.netstatus" we should graciously handle this, and not stop updating the unread counts in the folder pane. r/sr=bienvenu.